# tyco

./: .gitignore  .gitmodules  ERROR_REPORTING_IMPROVEMENTS.md  LICENSE  README.md  index.html  pyproject.toml  spec-full.html  spec.html  start-coding.html  v0.1.0.html  v0.1.html
.github/: copilot-instructions.md
backup/: start-coding.html
recipe/: meta.yaml
tyco/: __init__.py  _parser.py  cli.py  parser.py  parser2.py
tyco/tests/: expected  inputs  test_cli.py  test_load_features.py  test_parser.py
tyco/tests/expected/: simple1.json
tyco/tests/inputs/: simple0.tyco  simple1.tyco
typedconfig.io/: README.md  index.html  script.js  start-coding.html  styles.css
typedconfig.io/spec/: 0.1.0.html  0.1.1.html
