[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tyco"
version = "0.1.1"
description = "A Python library for the Typed Configuration language"
authors = [{name = "Matt Lauria", email = "matt@typedconfig.io"}]
license = {text = "MIT"}  # Or another license, e.g., Apache-2.0
readme = "README.md"
requires-python = ">=3.8"
keywords = ["configuration", "language", "parser"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "http://www.typedconfig.io"
Repository = "https://github.com/typedconfig/tyco"
